--- a/package.json
+++ b/package.json
@@ -33,12 +33,16 @@
     "@coreui/react": "^4.2.2",
     "@coreui/react-chartjs": "^2.0.3",
     "@coreui/utils": "^1.3.1",
-    "chart.js": "^3.7.1",
+    "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
     "classnames": "^2.3.1",
     "core-js": "^3.22.6",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-app-polyfill": "^3.0.0",
+    "react-bootstrap": "^2.4.0",
+    "react-chartjs-2": "^4.1.0",
+    "react-d3-speedometer": "^2.0.0-rc.3",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
